--- a/PushNotifications/PushNotifications/MainPage.xaml
+++ b/PushNotifications/PushNotifications/MainPage.xaml
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             mc:Ignorable="d" 
              x:Class="PushNotifications.MainPage">
+    <ContentPage.Content>
+        <StackLayout>
+            <!-- Place new controls here -->
+            <Entry x:Name="messageEntryField" Placeholder="Message" HorizontalOptions="FillAndExpand">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Entry x:Name="messageEntryField" Placeholder="Message" HorizontalOptions="FillAndExpand">
+            </Entry>
+            <Button x:Name="notificationButton" Text="Send Notification" HorizontalOptions="CenterAndExpand" Clicked="SendNotification">
 
-        </Entry>
-        <Button x:Name="notificationButton" Text="Send Notification" HorizontalOptions="CenterAndExpand">
-
-        </Button>
-    </StackLayout>
+            </Button>
+        </StackLayout>
+    </ContentPage.Content>
 
 </ContentPage>
